--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <!--    JAVASCRIPT AND JQUERY STUFF -->
-    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous">
-
-    </script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
-
-    </script>
-    <script src="number-list.js"></script>
-</head>
-<body>
-
-</body>
-</html>
+<h1>Enter numbers when prompted!</h1>
+<p>On the left are numbers entered <br/> 
+  and on the right amount of repeating </p>
